fixed overflow issue, and reduced some unnecessary code

--- a/src/App.css
+++ b/src/App.css
@@ -8,11 +8,6 @@
 
 body {
   background: #131313;
-  width: 100%;
-  height: 100%;
-  margin: 0px;
-  padding: 0px;
-  overflow-x: hiddien;
 }
 
 a {
